test/yacc/err_inherit5.error
YACC: e - line 26 of "./test/err_inherit5.y", syntax error
%type <nlist> declaration namelist(<cval>, <tval>) locnamelist(<tval>)
                                  ^
